fixing requestcontext & deprecated